<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Keyboard" customModule="KeyboardRiptutorial" customModuleProvider="target"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="Keyboard" customModule="KeyboardRiptutorial" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ppU-dF-4TJ">
                    <rect key="frame" x="152" y="44" width="110" height="200"/>
                    <subviews>
                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="BuP-6E-o7Q">
                            <rect key="frame" x="0.0" y="0.0" width="110" height="153"/>
                            <subviews>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" id="zoi-b9-zHY" userLabel="club">
                                    <rect key="frame" x="0.0" y="61.5" width="24.5" height="30"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <state key="normal" title="♣️"/>
                                    <connections>
                                        <action selector="buttonAction:" destination="-1" eventType="touchUpInside" id="J8o-RI-wb6"/>
                                    </connections>
                                </button>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" id="J3w-Lx-dci" userLabel="diamond">
                                    <rect key="frame" x="29.5" y="61.5" width="24.5" height="30"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <state key="normal" title="♦️"/>
                                    <connections>
                                        <action selector="buttonAction:" destination="-1" eventType="touchUpInside" id="uXY-aV-AL0"/>
                                    </connections>
                                </button>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" id="a3I-Xn-oOz" userLabel="heart">
                                    <rect key="frame" x="59" y="61.5" width="24.5" height="30"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <state key="normal" title="♥️"/>
                                    <connections>
                                        <action selector="buttonAction:" destination="-1" eventType="touchUpInside" id="vhe-5X-XcB"/>
                                    </connections>
                                </button>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" id="h74-mA-0of" userLabel="spade">
                                    <rect key="frame" x="88.5" y="61.5" width="21.5" height="30"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <state key="normal" title="♠️"/>
                                    <connections>
                                        <action selector="buttonAction:" destination="-1" eventType="touchUpInside" id="w1m-pa-goo"/>
                                    </connections>
                                </button>
                            </subviews>
                        </stackView>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" id="qsS-4f-Vc8" userLabel="return">
                            <rect key="frame" x="0.0" y="153" width="110" height="47"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <fontDescription key="fontDescription" type="system" pointSize="29"/>
                            <state key="normal" title="⏎"/>
                            <connections>
                                <action selector="buttonAction:" destination="-1" eventType="touchUpInside" id="lEO-xQ-y49"/>
                            </connections>
                        </button>
                    </subviews>
                </stackView>
            </subviews>
            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
            <constraints>
                <constraint firstItem="ppU-dF-4TJ" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="APc-3R-Sjj"/>
                <constraint firstItem="ppU-dF-4TJ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="uuS-rz-5zh"/>
            </constraints>
            <point key="canvasLocation" x="137.68115942028987" y="97.767857142857139"/>
        </view>
    </objects>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
